# StochasticWarp

./: .gitignore  CMakeLists.txt  helloWorld.py  readme.md
core/StWarp/: barycentric.cpp  barycentric.h  cage_deformer.cpp  cage_deformer.h  deform_node.cpp  deform_node.h  solver.cpp  solver.h  st_deformer.cpp  st_deformer.h  timer.h  type.h
example/plugins/2022/64/windows/: OLMCageDeformer.mll
example/plugins/2023/64/windows/: OLMCageDeformer.mll
example/plugins/2024/64/windows/: OLMCageDeformer.mll
example/scripts/mel/: AEolmAutoCageTransformTemplate.mel  AEolmCagePlayerNodeTemplate.mel  AEolmCageTemplate.mel  AEolmGreenCoordinatesTemplate.mel  AEolmHarmonicCoordinatesTemplate.mel  AEolmMVCTemplate.mel  AEolmMeanValueCoordinatesTemplate.mel  AEolmMultiCageTemplate.mel  AEolmReducedCageDeformerTemplate.mel  AEolmReducedCageTemplate.mel  AEolmStarCageCoordinatorTemplate.mel  AEolmStarCageDeformerTemplate.mel  AEolmStarCageMixerTemplate.mel  AEolmVertexClusterNodeTemplate.mel  AEolmWeightReductionNodeTemplate.mel  olm_ui_MVCCageDeformer.mel  olm_ui_createAdaptedCageDeformer.mel  olm_ui_createCageDeformer.mel  olm_ui_createMVCDeformer.mel  olm_ui_editAdaptedCageDeformer.mel  olm_ui_editCageDeformer.mel  olm_uis_cageDeformer.mel
example/scripts/python/: MVCCageDeformer.py  MVCCageDeformer_UI.py  StarCageDeformer.py  StarCageDeformer_UI.py
mel/: test.mel
plot/: plot.py
src/: StochasticWarp.cpp
